Added activity for customizing default browser settings

--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -8,6 +8,7 @@
 	    android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
+	android:textAppearance="?android:attr/textAppearanceListItem"
         />
     <TextView
 	    android:id="@+id/text"
