--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -2,17 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal" >
+    android:orientation="horizontal">
 
     <ImageView
-	    android:id="@+id/icon"
+	android:id="@+id/icon"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         />
     <TextView
-	    android:id="@+id/text"
+	android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
+	android:gravity="center_vertical"
 	android:textAppearance="?android:attr/textAppearanceListItem"
         />
 
